--- a/index.html
+++ b/index.html
@@ -358,22 +358,66 @@
         <img src="img/gal-9.jpeg" alt="Gallery image 9" class="gallery__img" />
       </figure>
       <figure class="gallery__item gallery__item--10">
-        <img src="img/gal-10.jpeg" alt="Gallery image 10" class="gallery__img" />
+        <img
+          src="img/gal-10.jpeg"
+          alt="Gallery image 10"
+          class="gallery__img"
+        />
       </figure>
       <figure class="gallery__item gallery__item--11">
-        <img src="img/gal-11.jpeg" alt="Gallery image 11" class="gallery__img" />
+        <img
+          src="img/gal-11.jpeg"
+          alt="Gallery image 11"
+          class="gallery__img"
+        />
       </figure>
       <figure class="gallery__item gallery__item--12">
-        <img src="img/gal-12.jpeg" alt="Gallery image 12" class="gallery__img" />
+        <img
+          src="img/gal-12.jpeg"
+          alt="Gallery image 12"
+          class="gallery__img"
+        />
       </figure>
       <figure class="gallery__item gallery__item--13">
-        <img src="img/gal-13.jpeg" alt="Gallery image 13" class="gallery__img" />
+        <img
+          src="img/gal-13.jpeg"
+          alt="Gallery image 13"
+          class="gallery__img"
+        />
       </figure>
       <figure class="gallery__item gallery__item--14">
-        <img src="img/gal-14.jpeg" alt="Gallery image 14" class="gallery__img" />
+        <img
+          src="img/gal-14.jpeg"
+          alt="Gallery image 14"
+          class="gallery__img"
+        />
       </figure>
     </section>
 
-    <footer class="footer">Footer</footer>
+    <footer class="footer">
+      <ul class="nav">
+        <li class="nav__item">
+          <a href="#" class="nav__link">Find your dream home</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Request proposal</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Download home planner</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Contact Us</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Submit your property</a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="nav__link">Come work with us!</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        &copy; Copyright 2020. Design by Jonas Schmedtmann. Developed by JoeDev
+      </p>
+    </footer>
   </body>
 </html>
