--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+      <button class="nav-btn"></button>
+    </div>
 
     <header class="header">Header</header>
 
@@ -189,42 +191,6 @@
         <svg class="home__like">
           <use xlink:href="img/sprite.svg#icon-heart-full"></use>
         </svg>
-        <h5 class="home__name">Beautiful Family House</h5>
-        <div class="home__location">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-          </svg>
-          <p>USA</p>
-        </div>
-        <div class="home__rooms">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-          </svg>
-          <p>5 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-expand"></use>
-          </svg>
-          <p>
-            325 m
-            <sup>2</sup>
-          </p>
-        </div>
-        <div class="home__price">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-key"></use>
-          </svg>
-          <p>$1,200,000</p>
-        </div>
-        <button class="btn home__btn">Contact realtor</button>
-      </div>
-
-      <div class="home">
-        <img src="img/house-4.jpeg" alt="House 4" class="home__img" />
-        <svg class="home__like">
-          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
-        </svg>
         <h5 class="home__name">Cozy Country House</h5>
         <div class="home__location">
           <svg>
@@ -237,6 +203,42 @@
             <use xlink:href="img/sprite.svg#icon-profile-male"></use>
           </svg>
           <p>4 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>
+            250 m
+            <sup>2</sup>
+          </p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$850,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+
+      <div class="home">
+        <img src="img/house-4.jpeg" alt="House 4" class="home__img" />
+        <svg class="home__like">
+          <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Large Rustical Villa</h5>
+        <div class="home__location">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Portugal</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>6 rooms</p>
         </div>
         <div class="home__area">
           <svg>
